--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" src="style.css">
     <title>Perfil 1</title>
+    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
-</div>
-<ul class="nav navbar-nav">
-  <li class="active"><a href="index.html">Inicio</a></li>
-  <li><a href="pags/emprendores.html">Emprendedores del área</a></li>
-  <li><a href="pags/empresas nacionales.html">Empresas Software Nacionales</a></li>
-  <li><a href="pags/empresas internacionales.html">Empresas Software Internacionales</a></li>
-</ul>
 
-</div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Inicio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="Pags/emprendores.html">Emprendedores del área</a>
+              <a class="nav-link" href="Pags/empresas nacionales.html">Empresas de Software Nacionales</a>
+              <a class="nav-link" href="Pags/empresas internacionales.html">Empresas de Software Internacionales</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
 </body>
 </html>
