--- a/pags/empresas internacionales.html
+++ b/pags/empresas internacionales.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Empresas de Software Internacionales</title> 
+    <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
-    <ul class="nav navbar-nav">
-        <li class="active"><a href="../index.html">Inicio</a></li>
-        <li><a href="./emprendores.html">Emprendedores del área</a></li>
-        <li><a href="./empresas nacionales.html">Empresas Software Nacionales</a></li>
-        <li><a href="./empresas internacionales.html">Empresas Software Internacionales</a></li>
-      </ul>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="./emprendores.html">Emprendedores del área</a>
+              <a class="nav-link" href="./empresas nacionales.html">Empresas de Software Nacionales</a>
+              <a class="nav-link" href="./empresas internacionales.html">Empresas de Software Internacionales</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
 </body>
 </html>
