--- a/pags/emprendores.html
+++ b/pags/emprendores.html
@@ -118,14 +118,49 @@
         <img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/464E/production/_91889971_gettyimages-460317988.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">
-            Ma Yun (en chino simplificado, 马云; pinyin, mă yún) conocido como Jack Ma (10 de septiembre de 1964)2​ es un empresario chino. Es el fundador y presidente 
-            ejecutivo de Alibaba Group, un consorcio de negocios de Internet de gran éxito en China. Ma nació en Hangzhou, provincia de Zhejiang, China. Tiene Capital neto: US$26.300 millones
-            Edad: 51 años
-            País: China
-            Fuente de riqueza: Alibaba
-            Su nombre en Occidente no es tan conocido pero, tal y como explican los creadores de esta lista, es "el Jeff Bezos de China". Y es que su empresa Alibaba es el almacén digital más grande del gigante asiático.
-            
-            Alibaba, la compañía china que amenaza el dominio de Amazon
+            Ma Yun (en chino simplificado, 马云; pinyin, mă yún) conocido como Jack Ma (10 de septiembre de 1964) es un empresario chino. Es el fundador y presidente 
+            ejecutivo de Alibaba Group, un consorcio de negocios de Internet de gran éxito en China. Ma nació en Hangzhou, provincia de Zhejiang, China. Tiene Capital 
+            neto: US$26.300 millones, su fuente de riqueza es Alibaba. Su nombre en Occidente no es tan conocido pero, tal y como explican los creadores de esta lista,
+            es "el Jeff Bezos de China". Y es que su empresa Alibaba es el almacén digital más grande del gigante asiático. Alibaba, la compañía china que amenaza el 
+            dominio de Amazon.
+        </p>
+        </div>
+      </div>
+
+
+      <div class="card" style="width: 18rem;">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSswDgdiNoMDWrnylT3iw9JRZZUuE0tFFqJ3GPysQbHLEWuKTGOsmAxH9qKssmHmh5fhxI&usqp=CAU" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">
+            Steven Paul Jobs​ es un empresario, diseñador industrial, magnate empresarial, propietario de medios e inversor estadounidense. Fue cofundador y presidente 
+            ejecutivo de Apple y máximo accionista individual de The Walt Disney Company. Su principal fuente de ingresos es Apple, Apple es una plataforma poderosa y 
+            flexible que acompaña a las empresas en la oficina, en la fábrica y en el terreno. El hardware, el software y los servicios trabajan juntos para ayudar a 
+            tu equipo a encontrar soluciones sencillas con sus dispositivos favoritos.
+        </p>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="https://i.blogs.es/75d164/andy-rubin/1366_2000.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">
+            Andrew Rubin (Chappaqua, Nueva York; 22 de junio de 1962) es un pionero en tecnologías estadounidense, cofundador y ex CEO de Danger Inc. y Android. Fue 
+            vicepresidente de ingeniería en Google, donde supervisaba el desarrollo de Android, un sistema operativo para teléfonos inteligentes. Android es el sistema 
+            operativo que utilizan algunos dispositivos móviles para poder funcionar. Es decir, se trata de todo aquello que puedes ver y con lo que puedes interactuar 
+            desde la pantalla de tu equipo.
+        </p>
+        </div>
+      </div>
+
+
+      <div class="card" style="width: 18rem;">
+        <img src="https://imageio.forbes.com/specials-images/imageserve/5f4baa7d3a183b7298e750f6/Digital-Media-Company-ByteDance/960x0.jpg?format=jpg&width=960" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">
+            Zhang Yiming probablemente conozcas su aplicación de transmisión de video TikTok, que se ha convertido en una de las aplicaciones más populares del mundo, 
+            con más de 1,000 millones de descargas. En 2012, Zhang fundó ByteDance, que se ha convertido en una de las plataformas de contenido de medios más grandes 
+            de China, con una valoración de 75,000 millones. Su patrimonio neto no ha cambiado desde hace un año. TikTok es una plataforma de video de formato corto 
+            que ofrece edición, efectos y sonidos dentro de la aplicación para que los usuarios desarrollen memes llenos de imaginación y contenido creativo.
         </p>
         </div>
       </div>
