Agregue empresas internacionales

--- a/pags/empresas internacionales.html
+++ b/pags/empresas internacionales.html
@@ -24,5 +24,67 @@
         </div>
       </nav>
 
+      <div class="card">
+        <h5 class="card-header">Empresas de software internacionales</h5>
+        <div class="card-body">
+          <h5 class="card-title">Dell Technologies</h5>
+          <p class="card-text">Dell es la empresa de tecnología de la información más rentable del mundo. Supera la 
+            clasificación con unos ingresos anuales de $108 mil millones de dólares y más de 10 millones de clientes 
+            en todo el mundo. Curiosamente, 99% de las empresas de Fortune 500 son clientes o socios de este gigante 
+            digital. La compañía Dell fue establecida en 1984 por Michael Dell, quien en ese momento era un estudiante 
+            de 19 años. Para ese entonces, la idea era producir computadoras totalmente personalizables para satisfacer 
+            las necesidades de cada cliente.</p>
+          <a href="https://www.dell.com/es-es" class="btn btn-primary">Mas información</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Accenture</h5>
+          <p class="card-text">Accenture fue creada como una división tecnológica de la empresa de contabilidad Arthur 
+            Andersen, pero en 1989 pasó a ser una empresa independiente. Hoy en día es una de las empresas de marketing 
+            digital más grandes, proporcionando a los clientes el proceso, estrategia y consultoría de negocios; 
+            tecnología de la información y soluciones de ingeniería; servicios de operaciones; soluciones de seguridad 
+            avanzada y productividad aumentada; así como transición a la nube.</p>
+          <a href="https://www.accenture.com/us-en" class="btn btn-primary">Mas información</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">TD Synnex</h5>
+          <p class="card-text">TD Synnex no es una típica compañía de tecnología de la información, sino más bien una 
+            firma de tercerización de procesos comerciales, conectando vendedores de tecnología con compradores. También 
+            ofrece servicio al cliente luego de la venta. La compañía trabaja con proveedores de software, sistemas 
+            de tecnología de la información, componentes y equipos. La compañía también es vendedora de servicios de 
+            marketing, como telemarketing, publicidad externa, correo directo, análisis de bases de datos y marketing 
+            basado en la web.</p>
+          <a href="https://www.tdsynnex.com/na/us/" class="btn btn-primary">Mas información</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">IBM</h5>
+          <p class="card-text">International Business Machines (IBM) o El Gigante Azul, como es llamada algunas veces, 
+            fue fundada en 1911 por Charles Flint. Durante tan larga historia, IBM le ha dado a este mundo un montón 
+            de cosas útiles, como disquetes, discos duros, tarjetas de banda magnética, base de datos relacionales, 
+            códigos de barra UPC, y mucho más. Además, el mainframe de la empresa concedió el primer cajero automático.
+            Hoy en día, entre los servicios más populares de IBM se encuentran la computación cognitiva y en la nube, 
+            infraestructura de tecnología de la información, seguridad digital, el internet de las cosas, análisis 
+            de datos, blockchain, e IA.</p>
+          <a href="https://www.ibm.com/us-en" class="btn btn-primary">Mas información</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Cisco Systems</h5>
+          <p class="card-text">Cisco Systems es la quinta empresa de tecnología de la información más rica en términos 
+            de ingresos, generando más de $52 mil millones de dólares anualmente. Era muy bien conocida por sus switchers, 
+            routers y otros equipos para redes. Pero desde el 2015, la empresa fue más allá hacia los campos innovadores 
+            relacionados con el software. Hoy por hoy, se enfoca más en el Internet de las Cosas, seguridad informática 
+            (la unidad de negocio de más rápido crecimiento de Cisco), computación en la nube, centros de datos, 
+            software y análisis.</p>
+          <a href="https://www.netacad.com/es" class="btn btn-primary">Mas información</a>
+        </div>
+      </div>
+
 </body>
 </html>
